--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
@@ -465,7 +465,7 @@ function simulateInput(x){
 			if(text.split(":")[0] == "Time")
 			{
 				sendTimef(text.split(":")[1]);
-                var now = new Date().getTIme();
+                var now = new Date().getTime();
                 if(Math.floor((updateGraphTime - now)/1000) >= 1){
                     updateGraphTime = now;
                     latencyGraph.updateGraph(latencies);
