--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
@@ -614,7 +614,6 @@ function latencyAnalyzer(){
 		function removeDisconnectPlayer(index)
 		{
 			isGamePlaying = false;
-			console.log(index);
 			opponents[index].Colors = "#ffffff";
 			opponents[index].names = "";
 			opponents[index].Score = "";
@@ -753,16 +752,18 @@ function latencyAnalyzer(){
 			this.setSpeedX = function(val)
 			{
 				if(val > 0)
-					speedX = 2;
+					this.speedX = val / parseFloat(latency);
 				else if( val < 0 )
-					speedX = -2;
+					this.speedX = -1 * (val / parseFloat(latency));
+				console.log("sX:" + this.speedX);
 			}
 			this.setSpeedY = function(val)
 			{
 				if(val > 0)
-					speedY = 2;
+					this.speedY = val / parseFloat(latency);
 				else if( val < 0 )
-					speedY = -2;
+					this.speedY = -1 * (val / parseFloat(latency));
+				console.log("sY:" + this.speedY);
 			}
         }
         function updateOpponentCoordinates(text)
@@ -770,19 +771,15 @@ function latencyAnalyzer(){
 				var res = text.split(";");
 				//opponent ID: 0.
 				opponents[0].Paddle.setSpeedY(parseFloat(res[1].split(",")[1]) - parseFloat(opponents[0].Paddle.getY()));
-				console.log(parseFloat(res[1].split(",")[1]) - opponents[0].Paddle.getY());
 				opponents[0].Paddle.setY(parseFloat(res[1].split(",")[1]));
 				//opponent ID: 1
 				opponents[1].Paddle.setSpeedX(parseFloat(res[2].split(",")[1]) - parseFloat(opponents[1].Paddle.getX()));
-				//console.log(parseFloat(res[2].split(",")[1]) - opponents[1].Paddle.getX());
 				opponents[1].Paddle.setX(parseFloat(res[2].split(",")[1]));
 				//opponent ID: 2
 				opponents[2].Paddle.setSpeedY(parseFloat(res[3].split(",")[1]) - parseFloat(opponents[2].Paddle.getY()));
-				//console.log(parseFloat(res[3].split(",")[1]) - opponents[2].Paddle.getY());
 				opponents[2].Paddle.setY(parseFloat(res[3].split(",")[1]));
 				//opponent ID: 3
 				opponents[3].Paddle.setSpeedX(parseFloat(res[4].split(",")[1]) - parseFloat(opponents[3].Paddle.getX()));
-				//console.log(parseFloat(res[4].split(",")[1]) - opponents[3].Paddle.getX());
 				opponents[3].Paddle.setX(parseFloat(res[4].split(",")[1]));
 		}
         
